Add possibility to define extra configuration files for httpd instance state

--- a/states/mdw/httpd/install/files/common.conf
+++ b/states/mdw/httpd/install/files/common.conf
@@ -1,13 +1,32 @@
+##################################################
+# Modules                                        #
+##################################################
+
+# Base
 LoadModule mpm_event_module {{ installDir }}/modules/mod_mpm_event.so
 LoadModule unixd_module {{ installDir }}/modules/mod_unixd.so
 LoadModule authz_core_module {{ installDir }}/modules/mod_authz_core.so
 LoadModule dir_module {{ installDir }}/modules/mod_dir.so
+
+# Access logs
 LoadModule log_config_module {{ installDir }}/modules/mod_log_config.so
+
+# Mime types
 LoadModule mime_module {{ installDir }}/modules/mod_mime.so
+
+# Proxy
+LoadModule proxy_module {{ installDir }}/modules/mod_proxy.so
+LoadModule proxy_http_module /lsf/opt/httpd/modules/mod_proxy_http.so
+
+##################################################
+# Configuration                                  #
+##################################################
 
 PidFile "run/httpd.pid"
 
 ErrorLog "logs/error.log"
+
+# Access Logs
 LogLevel info
 
 <IfModule log_config_module>
@@ -15,8 +34,13 @@ LogLevel info
   CustomLog "logs/access.log" common
 </IfModule>
 
+
+# Mime Types
 <IfModule mime_module>
   TypesConfig {{ installDir }}/conf/mime.types
   AddType application/x-compress .Z
   AddType application/x-gzip .gz .tgz
 </IfModule>
+
+# Proxy
+Mutex sem
