--- a/states/mdw/httpd/instance/files/conf/httpd.conf
+++ b/states/mdw/httpd/instance/files/conf/httpd.conf
@@ -5,3 +5,5 @@ Include {{ installDir }}/conf/common.conf
 ServerName "{{ conf.serverName }}"
 ServerRoot "{{ instanceDir }}"
 DocumentRoot "{{ instanceDir }}/htdocs"
+
+Include conf/extra/*.conf
