Create macro to start httpd and tomcat

--- a/states/mdw/httpd/instance/files/conf/httpd.conf
+++ b/states/mdw/httpd/instance/files/conf/httpd.conf
@@ -5,5 +5,6 @@ Include {{ installDir }}/conf/common.conf
 ServerName "{{ conf.serverName }}"
 ServerRoot "{{ instanceDir }}"
 DocumentRoot "{{ instanceDir }}/htdocs"
+PidFile "run/{{ instance }}.pid"
 
 Include conf/extra/*.conf
